Added options to increase VM size